Corrected Register Screen Issue

--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -14,7 +14,7 @@
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
         <script src="js/jquery.session.js"></script>
         <script src="js/loggedInOutBehavior.js"></script>
-        <script src="js/findYourPeople.js"></script>
+        <!--script src="js/findYourPeople.js"></script-->
         
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 
