--- a/register.html
+++ b/register.html
@@ -159,7 +159,7 @@
         </div>
         
          <script src="js/plugins.js"></script>
-        <script src="js/script.js"></script>
+        <!--script src="js/script.js"></script-->
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
          <script src="js/jquery-ajax-image-upload.js"></script>
          <script src="js/loggedInOutBehavior.js"></script>
