--- a/register.html
+++ b/register.html
@@ -6,24 +6,21 @@
         <title>Tabletribes</title> 
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
+       <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
         <link rel="stylesheet" type="text/css" href="css/register.css">
         <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/registeripad.css">
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
-
-
-
-        <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script> 
-
-
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.css">
+      <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script> 
+      
+		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script> 
         <script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
-
-
         <script src="js/jquery.uploadfile.min.js"></script>
         <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
         <script src="js/jquery.session.js"></script>
         <script src="js/register.js"></script> 
         <script src="js/libs/modernizr-2.5.3.min.js"></script>
+        
     </head>
 
     <body>
@@ -106,12 +103,12 @@
 
                         <li data-role="collapsible" data-iconpos="right" data-inset="false" data-mini="true" style="background-color:#333333;">
                             <h2>What do you want to talk about?</h2>
-                            <form>
+                            <!--form-->
                                 <fieldset id="topicsList" data-role="controlgroup" data-type="horizontal" data-mini="true"> 
 
 
                                 </fieldset>
-                            </form>
+                            <!--/form-->
                         </li>
                     </ul>
                     </div>
@@ -119,7 +116,7 @@
                     <div id="submitRegistrationButton" style="text-align:center">
                         <button id="submitRegistrationButton" class="findpplBtn" style="color:#ffffff; height: 50px; margin-top:10px; background-color: #b42723" >CONTINUE</button>
                     </div>
-                </form>
+</form>                
 
 
 
@@ -163,6 +160,7 @@
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
          <script src="js/jquery-ajax-image-upload.js"></script>
          <script src="js/loggedInOutBehavior.js"></script>
+        <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script>
 
     </body>
 </html>
