--- a/pendingInvitations.html
+++ b/pendingInvitations.html
@@ -15,7 +15,7 @@
         <script src="js/jquery.session.js"></script>
         <script src="js/loggedInOutBehavior.js"></script>
         <script src="js/mood.js"></script>
-        
+
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 
         <link rel="stylesheet" type="text/css" href="css/pendingInvitations.css">
@@ -37,38 +37,69 @@
 
 
             <div role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
-
-               <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
+                <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
                     <div class="ui-block-a" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="height:130px; margin:0px; padding:none;"><img src="images/pic2.png" style="height:130px;"></div></div>
                     <div class="ui-block-b" style="width:50%;"><div class="ui-bar ui-bar-a" style="height:130px"><p style="font-size:12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a href="#" style="display: block; color:#cc0000; font-size:9px;">Click to read more...</a></p><p style="font-size:12px">&#8226 Lorem ipsum<br>&#8226 dolor sit<br>&#8226 amet consec</p></div></div>
                     <div class="ui-block-c" style="width:20%;"><div class="ui-bar ui-bar-a" style="height:130px; border: 1px dotted #cc0000;"><img src="images/addprofile.png" style="height:130px; width:64px;"></div></div>
-               </div>
+                </div>
 
-              <div class="ui-grid-a" style="border: solid 1px #cc0000;">
-                     <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
-                     <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
-              </div>
+                <div class="ui-grid-a" style="border: solid 1px #cc0000;">
+                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
+                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
+                </div>
 
-              <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
+                <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
                     <div class="ui-block-a" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="height:130px; margin:0px; padding:none;"><img src="images/pic2.png" style="height:130px;"></div></div>
                     <div class="ui-block-b" style="width:50%;"><div class="ui-bar ui-bar-a" style="height:130px"><p style="font-size:12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a href="#" style="display: block; color:#cc0000; font-size:9px;">Click to read more...</a></p><p style="font-size:12px">&#8226 Lorem ipsum<br>&#8226 dolor sit<br>&#8226 amet consec</p></div></div>
                     <div class="ui-block-c" style="width:20%;"><div class="ui-bar ui-bar-a" style="height:130px; border: 1px dotted #cc0000;"><img src="images/addprofile.png" style="height:130px; width:64px;"></div></div>
-               </div>
+                </div>
 
-              <div class="ui-grid-a" style="border: solid 1px #cc0000;">
-                     <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
-                     <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
-              </div>
-              <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
+                <div class="ui-grid-a" style="border: solid 1px #cc0000;">
+                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
+                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
+                </div>
+                <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
                     <div class="ui-block-a" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="height:130px; margin:0px; padding:none;"><img src="images/pic2.png" style="height:130px;"></div></div>
                     <div class="ui-block-b" style="width:50%;"><div class="ui-bar ui-bar-a" style="height:130px"><p style="font-size:12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a href="#" style="display: block; color:#cc0000; font-size:9px;">Click to read more...</a></p><p style="font-size:12px">&#8226 Lorem ipsum<br>&#8226 dolor sit<br>&#8226 amet consec</p></div></div>
                     <div class="ui-block-c" style="width:20%;"><div class="ui-bar ui-bar-a" style="height:130px; border: 1px dotted #cc0000;"><img src="images/addprofile.png" style="height:130px; width:64px;"></div></div>
-               </div>
+                </div>
 
-              <div class="ui-grid-a" style="border: solid 1px #cc0000;">
-                     <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
-                     <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
-              </div>
+                <div class="ui-grid-a" style="border: solid 1px #cc0000;">
+                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
+                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
+                </div>
+
+                <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
+                    <div class="ui-block-a" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="height:130px; margin:0px; padding:none;"><img src="images/pic2.png" style="height:130px;"></div></div>
+                    <div class="ui-block-b" style="width:50%;"><div class="ui-bar ui-bar-a" style="height:130px"><p style="font-size:12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a href="#" style="display: block; color:#cc0000; font-size:9px;">Click to read more...</a></p><p style="font-size:12px">&#8226 Lorem ipsum<br>&#8226 dolor sit<br>&#8226 amet consec</p></div></div>
+                    <div class="ui-block-c" style="width:20%;"><div class="ui-bar ui-bar-a" style="height:130px; border: 1px dotted #cc0000;"><img src="images/addprofile.png" style="height:130px; width:64px;"></div></div>
+                </div>
+
+                <div class="ui-grid-a" style="border: solid 1px #cc0000;">
+                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
+                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
+                </div>
+
+                <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
+                    <div class="ui-block-a" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="height:130px; margin:0px; padding:none;"><img src="images/pic2.png" style="height:130px;"></div></div>
+                    <div class="ui-block-b" style="width:50%;"><div class="ui-bar ui-bar-a" style="height:130px"><p style="font-size:12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a href="#" style="display: block; color:#cc0000; font-size:9px;">Click to read more...</a></p><p style="font-size:12px">&#8226 Lorem ipsum<br>&#8226 dolor sit<br>&#8226 amet consec</p></div></div>
+                    <div class="ui-block-c" style="width:20%;"><div class="ui-bar ui-bar-a" style="height:130px; border: 1px dotted #cc0000;"><img src="images/addprofile.png" style="height:130px; width:64px;"></div></div>
+                </div>
+
+                <div class="ui-grid-a" style="border: solid 1px #cc0000;">
+                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
+                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
+                </div>
+                <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
+                    <div class="ui-block-a" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="height:130px; margin:0px; padding:none;"><img src="images/pic2.png" style="height:130px;"></div></div>
+                    <div class="ui-block-b" style="width:50%;"><div class="ui-bar ui-bar-a" style="height:130px"><p style="font-size:12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a href="#" style="display: block; color:#cc0000; font-size:9px;">Click to read more...</a></p><p style="font-size:12px">&#8226 Lorem ipsum<br>&#8226 dolor sit<br>&#8226 amet consec</p></div></div>
+                    <div class="ui-block-c" style="width:20%;"><div class="ui-bar ui-bar-a" style="height:130px; border: 1px dotted #cc0000;"><img src="images/addprofile.png" style="height:130px; width:64px;"></div></div>
+                </div>
+
+                <div class="ui-grid-a" style="border: solid 1px #cc0000;">
+                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
+                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
+                </div>
 
             </div><!-- /content -->
 
