--- a/mood_old.html
+++ b/mood_old.html
@@ -65,7 +65,7 @@
                     
                     <li data-icon='false' class="stateless"><a href="#"><i class='lIcon fa fa-share'></i>&nbsp; SHARE WITH FRIENDS</a></li>
                 </ul>
-                <form name="acceptInvite" id="acceptInviteForm" method="post" action="http://vast-scrubland-7419.herokuapp.com/credentialService/acceptInvitation">  
+                <form name="acceptInvite" id="acceptInviteForm" method="post" action="http://evening-thicket-5124.herokuapp.com/credentialService/acceptInvitation">  
                     <input type="hidden" name="username_from_accept" id="username_from">
                     <input type="hidden" name="username_to_accept" id="username_to">
                  </form>
