fixed colors= partial

--- a/login.html
+++ b/login.html
@@ -25,8 +25,8 @@
                 <h3>SIGN IN WITH</h3>
 
                 <!-- This is the  to initiate side panels-->
-                <a href="#nav-panel" data-icon="mygear" id="closeleftPanel" class="ios app-theme-none notext" data-iconpos="notext" style="background:#b42723;">Menu</a>
-                <a href="#add-form" data-icon="dot" data-iconpos="notext" id="closerightPanel" style="background:#b42723">Add</a>
+                <a href="#nav-panel" data-icon="mygear" id="closeleftPanel" class="ios app-theme-none notext" data-iconpos="notext" style="background:#cc0000; margin-right:5px; margin-top:5px;">Menu</a>
+                <a href="#add-form" data-icon="dot" data-iconpos="notext" id="closerightPanel" style="background:#cc0000; margin-right:5px; margin-top:5px;">Add</a>
             </div><!-- /header -->
 
 
@@ -44,11 +44,11 @@
 
 
                 <div style="text-align:center">
-                    <a href="#" id="continueButton" class="findpplBtn" style="color:#ffffff; margin-top:10px;" >CONTINUE</a>
+                    <a href="#" id="continueButton" class="findpplBtn" style="color:#ffffff; background-color: #cc0000; margin-top:10px;" >CONTINUE</a>
                 </div>
 
                 <div  style="text-align:center">
-                    <a href="#" id="registerButton" class="findpplBtn" style="color:#ffffff; margin-top:10px;" >REGISTER</a>
+                    <a href="#" id="registerButton" class="findpplBtn" style="color:#ffffff; background-color: #cc0000; margin-top:10px;" >REGISTER</a>
                 </div>     
 
                 <div style="text-align:center; margin-top:10px;"> 
@@ -72,9 +72,9 @@
             <!-- This is for the right panel-->
             <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
                 <ul data-role="listview">
-                    <li data-icon="delete"><a href="#" data-rel="close"></a></li><br>
-                    <li class="loggedInFields" data-icon="logoicon"><a id="myTable" href="#">My Tables<span id="tableNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
-                    <li class="loggedInFields" data-icon="bell"><a id="invites" href="">Pending Invitations<span id="inviteNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
+                    <li data-icon="delete"><a href="#" data-rel="close"><br></a></li>
+                    <li class="loggedInFields" data-icon="logoicon"><a id="myTable" href="#">My Tables<span id="tableNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>
+                    <li class="loggedInFields" data-icon="bell"><a id="invites" href="">Pending Invitations<span id="inviteNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>
                     <li data-icon="logoicon"><a id="myTable" href="#">Terms and Condition</a></li>
                     <li onclick="login()" class="loggedOutFields" data-icon="bell"><a href="">Login</a></li>
                     <li data-icon="logouticon" onclick="logout()" class="loggedInFields" data-icon="bell"><a href="">Logout</a></li>
