--- a/mood.html
+++ b/mood.html
@@ -30,8 +30,8 @@
                 <h3>WHAT ARE YOU IN THE MOOD FOR?</h3>
 
                 <!-- This is the  to initiate side panels-->
-                <a href="#nav-panel" data-icon="mygear" id="closeleftPanel" class="ios app-theme-none notext" data-iconpos="notext" style="background:#b42723;">Menu</a>
-                <a href="#add-form" data-icon="dot" data-iconpos="notext" id="closerightPanel" style="background:#b42723">Add</a>
+                <a href="#nav-panel" data-icon="mygear" id="closeleftPanel" class="ios app-theme-none notext" data-iconpos="notext" style="background:#cc0000; margin-right:5px; margin-top:5px;">Menu</a>
+                <a href="#add-form" data-icon="dot" data-iconpos="notext" id="closerightPanel" style="background:#cc0000; margin-right:5px; margin-top:5px;">Add</a>
             </div><!-- /header -->
 
 
@@ -92,11 +92,11 @@
                     <input id="address" name="location" id="location" placeholder="Location" value="" type="text">
 
                 </ul> <!--ends the preference list-->
-
+                <br>
 
                 <!-- This div is the Find my people button. Inactive once clicked-->
                 <div id="findppl" style="text-align:center">
-                    <a href="#" class="findpplBtn" onclick="findMyPeople()" style="color:#ffffff;">FIND MY PEOPLE</a>
+                    <a href="#" class="findpplBtn" onclick="findMyPeople()" style="color:#ffffff; background-color: #cc0000;">FIND MY PEOPLE</a>
                 </div>
 
 
