--- a/register.html
+++ b/register.html
@@ -31,8 +31,8 @@
                 <h3>CREATE A NEW PROFILE</h3>
 
                 <!-- This is the  to initiate side panels-->
-                <a href="#nav-panel" data-icon="mygear" id="closeleftPanel" class="ios app-theme-none notext" data-iconpos="notext" style="background:#b42723;">Menu</a>
-                <a href="#add-form" data-icon="dot" data-iconpos="notext" id="closerightPanel"  style="background:#b42723">Add</a>
+                <a href="#nav-panel" data-icon="mygear" id="closeleftPanel" class="ios app-theme-none notext" data-iconpos="notext" style="background:#cc0000;">Menu</a>
+                <a href="#add-form" data-icon="dot" data-iconpos="notext" id="closerightPanel"  style="background:#cc0000; margin-right:5px;">Add</a>
             </div><!-- /header -->
 
 
@@ -101,11 +101,11 @@
                    
                     <ul data-role="listview" style="margin-bottom:10px; padding-top: 10px;" data-mini="true">
 
-                        <li data-role="collapsible" data-iconpos="right" data-inset="false" data-mini="true" style="background-color:#333333;">
+                        <li data-role="collapsible" data-iconpos="right" data-inset="false" data-mini="true">
                             <h2>What do you want to talk about?</h2>
                             <!--form-->
                                 <fieldset id="topicsList" data-role="controlgroup" data-type="horizontal" data-mini="true"> 
-
+                                 
 
                                 </fieldset>
                             <!--/form-->
@@ -114,7 +114,7 @@
                     </div>
 
                     <div id="submitRegistrationButton" style="text-align:center">
-                        <button id="submitRegistrationButton" class="findpplBtn" style="color:#ffffff; height: 50px; margin-top:10px; background-color: #b42723" >CONTINUE</button>
+                        <button id="submitRegistrationButton" class="findpplBtn" style="color:#ffffff; height: 50px; margin-top:10px; background-color: #cc0000" >CONTINUE</button>
                     </div>
 </form>                
 
