--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -91,7 +91,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer augue ipsum, pl
             <!-- This is for the right panel-->
             <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
                 <ul data-role="listview">
-                    <li data-icon="delete"><a href="#" data-rel="close"></a></li><br>
+                    <li data-icon="delete"><a href="#" data-rel="close"><br></a></li>
                     <li class="loggedInFields" data-icon="logoicon"><a id="myTable" href="#">My Tables<span id="tableNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
                     <li class="loggedInFields" data-icon="bell"><a id="invites" href="">Pending Invitations<span id="inviteNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
                     <li data-icon="logoicon"><a id="myTable" href="#">Terms and Condition</a></li>
