--- a/pendingInvitations.html
+++ b/pendingInvitations.html
@@ -44,8 +44,8 @@
                 </div>
 
                 <div class="ui-grid-a" style="border: solid 1px #cc0000;">
-                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
-                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
+                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:30px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
+                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:30px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
                 </div>
 
                 <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
@@ -55,8 +55,8 @@
                 </div>
 
                 <div class="ui-grid-a" style="border: solid 1px #cc0000;">
-                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
-                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
+                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:30px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
+                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:30px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
                 </div>
                 <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
                     <div class="ui-block-a" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="height:130px; margin:0px; padding:none;"><img src="images/pic2.png" style="height:130px;"></div></div>
@@ -65,19 +65,8 @@
                 </div>
 
                 <div class="ui-grid-a" style="border: solid 1px #cc0000;">
-                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
-                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
-                </div>
-
-                <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
-                    <div class="ui-block-a" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="height:130px; margin:0px; padding:none;"><img src="images/pic2.png" style="height:130px;"></div></div>
-                    <div class="ui-block-b" style="width:50%;"><div class="ui-bar ui-bar-a" style="height:130px"><p style="font-size:12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a href="#" style="display: block; color:#cc0000; font-size:9px;">Click to read more...</a></p><p style="font-size:12px">&#8226 Lorem ipsum<br>&#8226 dolor sit<br>&#8226 amet consec</p></div></div>
-                    <div class="ui-block-c" style="width:20%;"><div class="ui-bar ui-bar-a" style="height:130px; border: 1px dotted #cc0000;"><img src="images/addprofile.png" style="height:130px; width:64px;"></div></div>
-                </div>
-
-                <div class="ui-grid-a" style="border: solid 1px #cc0000;">
-                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
-                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
+                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:30px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
+                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:30px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
                 </div>
 
                 <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
@@ -87,8 +76,19 @@
                 </div>
 
                 <div class="ui-grid-a" style="border: solid 1px #cc0000;">
-                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
-                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
+                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:30px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
+                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:30px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
+                </div>
+
+                <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
+                    <div class="ui-block-a" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="height:130px; margin:0px; padding:none;"><img src="images/pic2.png" style="height:130px;"></div></div>
+                    <div class="ui-block-b" style="width:50%;"><div class="ui-bar ui-bar-a" style="height:130px"><p style="font-size:12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a href="#" style="display: block; color:#cc0000; font-size:9px;">Click to read more...</a></p><p style="font-size:12px">&#8226 Lorem ipsum<br>&#8226 dolor sit<br>&#8226 amet consec</p></div></div>
+                    <div class="ui-block-c" style="width:20%;"><div class="ui-bar ui-bar-a" style="height:130px; border: 1px dotted #cc0000;"><img src="images/addprofile.png" style="height:130px; width:64px;"></div></div>
+                </div>
+
+                <div class="ui-grid-a" style="border: solid 1px #cc0000;">
+                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:30px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
+                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:30px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
                 </div>
                 <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
                     <div class="ui-block-a" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="height:130px; margin:0px; padding:none;"><img src="images/pic2.png" style="height:130px;"></div></div>
@@ -97,8 +97,8 @@
                 </div>
 
                 <div class="ui-grid-a" style="border: solid 1px #cc0000;">
-                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
-                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:40px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
+                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a" style="height:30px; background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
+                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a" style="height:30px; background-color:#88ccc1; color:#ffffff; text-shadow:none;">COFFEE/TEA</div></div>
                 </div>
 
             </div><!-- /content -->
@@ -137,7 +137,7 @@
             <!-- This is for the right panel-->
             <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
                 <ul data-role="listview">
-                    <li data-icon="delete"><a href="#" data-rel="close"><br></a></li>
+                    <li data-icon="delete"><a href="#" data-rel="close"></a></li><br>
                     <li class="loggedInFields" data-icon="logoicon"><a id="myTable" href="#">My Tables<span id="tableNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
                     <li class="loggedInFields" data-icon="bell"><a id="invites" href="">Pending Invitations<span id="inviteNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
                     <li data-icon="logoicon"><a id="myTable" href="#">Terms and Condition</a></li>
@@ -147,7 +147,6 @@
 
                 </ul>
             </div><!--  right panel -->
-
             <!--<div data-role="footer" data-position="fixed"></div> <!-Important -->
 
         </div>
