myTables page and few fixes

--- a/mood.html
+++ b/mood.html
@@ -101,9 +101,9 @@
 
 
                 <!-- This div is the sign in/register buttons-->
-                <div id="loginBtn" style="text-align:center; margin-top:30px;display: none">
-                    <a href="#" class="signinBtn" style="color:#ffffff;" onclick="signIn()">SIGN IN</a>
-                    <a href="#" class="registerBtn" onclick="register()" style="color:#ffffff;">FIRST TIME</a>
+                <div id="loginBtn" style="text-align:center; margin-top:30px;display: none;">
+                    <a href="#" class="signinBtn" style="color:#ffffff; background-color: #cc0000;" onclick="signIn()">SIGN IN</a>
+                    <a href="#" class="registerBtn" onclick="register()" style="color:#ffffff; background-color: #cc0000;">FIRST TIME</a>
                 </div>
 
 
