--- a/register.html
+++ b/register.html
@@ -80,8 +80,8 @@
 
                     <input name="lastName" id="lastName" placeholder="Last Name" value="" type="text"/>
 
-                    <label for="homeTown" class="ui-hidden-accessible">Last Name</label>
-                    <input name="homeTown" id="homeTown" placeholder="Home Town" value="" type="text"/>
+                    <label for="homeTown" class="ui-hidden-accessible">Select a city</label>
+                    <input name="homeTown" id="homeTown" placeholder="Select a city" value="" type="text"/>
 
                     <label for="emailAddress" class="ui-hidden-accessible">Email address</label>
                     <input name="email" id="email" placeholder="Enter your email address" value="" type="text"/>
