UI changes-partial

--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -8,6 +8,7 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
         <link rel="stylesheet" href="css/timepicker.css">
+        <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
         <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script> 
 
 
@@ -44,8 +45,8 @@
                 <h3>FINAL DETAILS</h3>
 
                 <!-- This is the  to initiate side panels-->
-                <a href="#nav-panel" data-icon="mygear" id="closeleftPanel" class="ios app-theme-none notext" data-iconpos="notext" style="background:#cc0000;">Menu</a>
-                <a href="#add-form" data-icon="dot" data-iconpos="notext" id="closerightPanel" style="background:#cc0000">Add</a>
+                <a href="#nav-panel" data-icon="mygear" id="closeleftPanel" class="ios app-theme-none notext" data-iconpos="notext" style="background:#cc0000; margin-left:5px; margin-top:5px;">Menu</a>
+                <a href="#add-form" data-icon="dot" data-iconpos="notext" id="closerightPanel" style="background:#cc0000; margin-right:5px; margin-top:5px;">Add</a>
             </div><!-- /header -->
 
 
