--- a/login.html
+++ b/login.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Tabletribes</title> 
-        <link rel="shortcut icon" type="image/x-icon" href="ttfav.ico" />
-        <link rel="icon" type="image/x-icon" href="ttfav.ico" />
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
         <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
@@ -15,6 +15,8 @@
         
         <link rel="stylesheet" type="text/css" href="css/login.css">
         <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/loginipad.css">
+        <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
+
     </head>
 
     <body>
