--- a/myTables.html
+++ b/myTables.html
@@ -20,6 +20,7 @@
 
         <link rel="stylesheet" type="text/css" href="css/myTables.css">
         <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/ipad.css">
+         <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
     </head>
 
     <body>
