--- a/pendingInvitations.html
+++ b/pendingInvitations.html
@@ -19,6 +19,7 @@
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 
         <link rel="stylesheet" type="text/css" href="css/pendingInvitations.css">
+         <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
         <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/ipad.css">
     </head>
 
@@ -137,7 +138,7 @@
             <!-- This is for the right panel-->
             <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
                 <ul data-role="listview">
-                    <li data-icon="delete"><a href="#" data-rel="close"></a></li><br>
+                    <li data-icon="delete"><a href="#" data-rel="close"><br></a></li>
                     <li class="loggedInFields" data-icon="logoicon"><a id="myTable" href="#">My Tables<span id="tableNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
                     <li class="loggedInFields" data-icon="bell"><a id="invites" href="">Pending Invitations<span id="inviteNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
                     <li data-icon="logoicon"><a id="myTable" href="#">Terms and Condition</a></li>
