--- a/register.html
+++ b/register.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" type="text/css" href="css/register.css">
         <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/registeripad.css">
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.css">
+        <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
       <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script> 
       
 		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script> 
