--- a/pendingInvitations.html
+++ b/pendingInvitations.html
@@ -40,7 +40,7 @@
             <div role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
                 <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
                     <div class="ui-block-a" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="height:130px; margin:0px; padding:none;"><img src="images/pic2.png" style="height:130px;"></div></div>
-                    <div class="ui-block-b" style="width:50%;"><div class="ui-bar ui-bar-a" style="height:130px"><p style="font-size:12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a href="#" style="display: block; color:#cc0000; font-size:9px;">Click to read more...</a></p><p style="font-size:12px">&#8226 Lorem ipsum<br>&#8226 dolor sit<br>&#8226 amet consec</p></div></div>
+                    <div class="ui-block-b" style="width:50%;"><div class="ui-bar ui-bar-a" style="height:130px"><p style="font-size:12px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a href="#" style="display: block; color:#cc0000; font-size:9px;">Click to read more...</a></p><p style="font-size:12px">&#8226 Lorem ipsum<br>&#8226 dolor sit<br>&#8226 amet consec</p></div></div>
                     <div class="ui-block-c" style="width:20%;"><div class="ui-bar ui-bar-a" style="height:130px; border: 1px dotted #cc0000;"><img src="images/addprofile.png" style="height:130px; width:64px;"></div></div>
                 </div>
 
