fixed icons -partial browser resizing

--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -93,7 +93,7 @@
                 <input id="address" name="location" id="location" placeholder="Location" value="" type="text">
 
                 <div style="text-align:center; padding-top:5%">
-                    <p style="float: left; margin-left:10px;" class="activitypicc"><img id="actpic" src="images/coffeeinvertbig.png" class="actpic" style="border: dotted 1px#b42723;"></p>
+                    <p style="float: left; margin-left:10px;" class="activitypicc"><img id="actpic" src="images/coffeeinvert.svg" class="actpic" style="border: dotted 1px#b42723;"></p>
 
                     <a href="#" class="confirminvitesButton" style="color:#ffffff; background-color: #cc0000;">SEND OUT INVITES</a>
                 </div>
