--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -54,10 +54,10 @@
 
 
                 </div><!-- /content -->
-                <fieldset class="ui-grid-b" style="border:1px solid #cc0000; background:#ffffff; height:50px; margin-top:2px;">
-                    <div class="ui-block-a" class="AddButton"><input id="addButton" type="image" src="images/addprofile.png" style="height:50px; width:106px;" /></div>
-                    <div class="ui-block-b" class="MoveOnButton"><input id="moveOnButton" type="image" src="images/moveon.png" style="height:50px; width:106px;" /></div>
-                    <div class="ui-block-c" class="ConfirmButton"><input id="confirmButton" type="image" src="images/confirm.png" style="height:50px; width:106px;" /></div>
+                <fieldset class="ui-grid-b" style="border:1px solid #cc0000; background:#ffffff; margin-top:2px;">
+                    <div class="ui-block-a" class="AddButton"><input id="addButton" type="image" src="images/addprofile.svg"/></div>
+                    <div class="ui-block-b" class="MoveOnButton"><input id="moveOnButton" type="image" src="images/moveon.svg"/></div>
+                    <div class="ui-block-c" class="ConfirmButton"><input id="confirmButton" type="image" src="images/confirm.svg"/></div>
                 </fieldset>
 
 
