--- a/mood.html
+++ b/mood.html
@@ -43,9 +43,9 @@
                 <!-- This is the preference panel div-->
                 <div data-role="controlgroup" data-type="horizontal" style="text-align:center; padding: 0px; margin: 0px; width:100%">
 
-                    <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="coffee" style="background:#ffffff; padding: 22px;"><img src="images/coffeeinvert.png"></a>
-                    <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="drinks" style="background:#ffffff;padding: 22px;"><img src="images/drinksinvert.png"></a>
-                    <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="dine" style="background:#ffffff;padding: 22px;"><img src="images/dineinvert.png"></a>
+                    <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="coffee" style="background:#ffffff; padding: 22px;"><img src="images/coffeeinvert.svg" class="coffee"></a>
+                    <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="drinks" style="background:#ffffff;padding: 22px;"><img src="images/drinksinvert.svg" class="drinks"></a>
+                    <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="dine" style="background:#ffffff;padding: 22px;"><img src="images/dineinvert.svg" class="dine"></a>
                   
                 </div>
 
